--- a/help.htm
+++ b/help.htm
@@ -42,15 +42,16 @@ Beginning of the main, clickable content.
 <div class="main">
         <div class="wrapper">
                 
-                <div class="information">Need help? Scroll down below to get any help you need!</div>
+                <div class="information">Need help? Scroll below to find answers to popular questions!</div>
+				
                 <span class="help">What if my school isn't on the list?</span><br>
                 If your school isn't on the list, we haven't added it yet.  Please continue checking back on this website
                 to see if your school has been added.<br>
                 <br><span class="help">How much does it cost to get solar panels installed?</span><br>
                 Solar panels installation companies can be found locally in the Knoxville area.  Please refer to the local
                 phone book or search for the companies online.<br>
-                <br><span class="help">How do I decide on a good payoff date?</span><br>
-                A good payoff date is normally five to ten years after the panels are installed.  However, your payoff may
+                <br><span class="help">How do I decide on a good pay-off date?</span><br>
+                A good payoff date is normally five to ten years after the panels are installed.  However, your pay-off may
                 be sooner if you have more panels or a higher efficiency system.<br>
                 <br><span class="help">I don't understand what any of these variables are! Can you help me?</span><br>
                 Our full user's manual is available as a PDF <a href="https://www.dropbox.com/s/n7p3cd2f5jhkc6o/UserManual.PDF?dl=1">here</a>.<br>
@@ -66,7 +67,7 @@ End of the main, clickable content.
 
 <footer>
         <div class="wrapper">
-        Copyright &copy; 2014 L&amp;N STEM Academy. All rights reserved.
+        Copyright &copy; 2014 L&amp;N STEM Academy.
         </div><!-- end of wrapper -->
 </footer><!-- end of footer -->
 
