--- a/step2.htm
+++ b/step2.htm
@@ -49,13 +49,13 @@
                 <input class="input_main" type="number" id="width" placeholder="48" tabindex="2" required><br>
                 Height of one panel in inches:<br>
                 <input class="input_main" type="number" id="height" placeholder="60" tabindex="3" required><br>
-                Percent of roof desired to be covered:<br>
+                Percent of roof to be covered:<br>
                 <input class="input_main" type="number" id="roofsize" placeholder="75" tabindex="4" required><br>
                 </div> <!-- end of left main -->
                 <div class="rightmain">
                 Cost per panel in dollars:<br>
                 <input class="input_main" type="number" id="install" placeholder="650" tabindex="5" required><br>
-                Desired payoff time in months:<br>
+                Desired pay-off time in months:<br>
                 <input class="input_main" type="number" id="payoff" placeholder="72" tabindex="6" required><br>
                 Power produced per panel in watts:<br>
                 <input class="input_main" type="number" id="panelpower" placeholder="265" tabindex="7" required><br>
@@ -67,7 +67,7 @@
 <!-- All done, display our footer. -->
 <footer>
         <div class="wrapper">
-        Copyright &copy; 2014 L&amp;N STEM Academy. All rights reserved.
+        Copyright &copy; 2014 L&amp;N STEM Academy.
         </div>
 </footer><!-- End of footer -->
 <script type="text/javascript">
