--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <!-- All done, display our footer. -->
 <footer>
         <div class="wrapper">
-        Copyright &copy; 2014 L&amp;N STEM Academy. All rights reserved.
+        Copyright &copy; 2014 L&amp;N STEM Academy.
         </div>
 </footer><!-- End of footer -->
 </body>
