--- a/step3.htm
+++ b/step3.htm
@@ -31,8 +31,8 @@
                 <!-- Give the User all the feedback they desire. -->
                 Energy produced in one year: <b><script type="text/javascript">document.write(Math.round(allpanelsoutputfinalperyear));</script></b> kw/h.<br>
                 Pay-off time for initial investment: <b><script type="text/javascript">document.write(Math.round(payofftimeinyears * 100) / 100);</script></b> years.<br>
-                Savings in ten years: $<b><script type="text/javascript">document.write(Math.round(moneysaved10years * 100) / 100);</script></b>.<br>
-                                Total money spent: $<b><script type="text/javascript">document.write(commaSeparateNumber(Math.round(moneyspent * 100) / 100));</script></b>.<br>
+                Savings in ten years: <b>$<script type="text/javascript">document.write(commaSeparateNumber(Math.round(moneysaved10years * 100) / 100);</script></b>.<br>
+                                Total money spent: <b>$<script type="text/javascript">document.write(commaSeparateNumber(Math.round(moneyspent * 100) / 100));</script></b>.<br>
                                 Panels needed for your roof: <b><script type="text/javascript">document.write(Math.round(panelsNeeded));</script></b>.<br><br>
                 Thank you for using our calculator! If you would like to start over, click <a href="index.html"><b>here</b></a>.
                 </div> <!-- That's all the info we'll present. -->
@@ -40,10 +40,12 @@
                 <div id="yesno" class="rightmain" style="text-align:center;">
                 <script type="text/javascript">
                 if (goodinvestment == true) {
-                        document.write("<span style=\"color:#069800; font-size:80px;\">Yes!</span>");
+                        //document.write("<span style=\"color:#069800; font-size:80px;\">Yes!</span>");
+						document.write("<img src=\"pictures/yescheck.png\" height=\"180\" width=\"300\" alt=\"Yes\">");
                 } else {
-                        document.write("<span style=\"color:#A10000; font-size:80px;\">No<span>");
-                }
+                        //document.write("<span style=\"color:#A10000; font-size:80px;\">No<span>");
+						document.write("<img src=\"pictures/nocheck.png\" height=\"187\" width=\"300\" alt=\"No\">");
+				}
                 </script>
                 </div> <!-- Right main done. -->
                 <div class="buttons"><a class="grey left" href="help.htm">Help</a><a class="red left" href="step2.htm">Back</a></div>
@@ -53,7 +55,7 @@
 <!-- All done, display our footer. -->
 <footer>
         <div class="wrapper">
-        Copyright &copy; 2014 L&amp;N STEM Academy. All rights reserved.
+        Copyright &copy; 2014 L&amp;N STEM Academy.
         </div>
 </footer><!-- End of footer -->
 </body>
