--- a/step3.htm
+++ b/step3.htm
@@ -31,7 +31,7 @@
                 <!-- Give the User all the feedback they desire. -->
                 Energy produced in one year: <b><script type="text/javascript">document.write(Math.round(allpanelsoutputfinalperyear));</script></b> kw/h.<br>
                 Pay-off time for initial investment: <b><script type="text/javascript">document.write(Math.round(payofftimeinyears * 100) / 100);</script></b> years.<br>
-                Savings in ten years: <b>$<script type="text/javascript">document.write(commaSeparateNumber(Math.round(moneysaved10years * 100) / 100);</script></b>.<br>
+                Savings in ten years: <b>$<script type="text/javascript">document.write(commaSeparateNumber(Math.round(moneysaved10years * 100) / 100));</script></b>.<br>
                                 Total money spent: <b>$<script type="text/javascript">document.write(commaSeparateNumber(Math.round(moneyspent * 100) / 100));</script></b>.<br>
                                 Panels needed for your roof: <b><script type="text/javascript">document.write(Math.round(panelsNeeded));</script></b>.<br><br>
                 Thank you for using our calculator! If you would like to start over, click <a href="index.html"><b>here</b></a>.
